[package]
name = "cascade-protocol-deadline-validator"
version = "0.0.0"
edition = {workspace = true}
readme = {workspace = true}
license-file = {workspace = true}
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
solana-program = "3.0"
thiserror = "2.0"

[dev-dependencies]
mollusk-svm = "0.7.1"
mollusk-svm-bencher = "0.7.1"
solana-instruction = "3.0"
solana-program-error = "3.0"
solana-logger = "3.0"
solana-transaction-context = "=3.0.10"

[[bench]]
name = "compute_units"
harness = false
